Fix the gap on the Navbar menu

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
 }
 
 a {
@@ -16,7 +17,7 @@ a:hover {
 
 .links {
   display: flex;
-  gap: 1rem;
+  gap: 5rem;
 }
 
 .link {
